@@ -1,5 +1,5 @@
-always_built_SUBDIRS =				\
-	default-applications desktop-links	\
-	common background keyboard mouse
+always_built_SUBDIRS =					\
+	common default-applications desktop-links	\
+	background keyboard mouse
  
 SUBDIRS =  $(always_built_SUBDIRS) $(SCREENSAVER)
